ffxivws/static/style.css
/* Global items */

body {
  background-color: #444;
  color: #eee;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  margin: 0;
}

body > main {
  margin-bottom: 50px;
}
#page-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: default;
  font-weight: bold;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, Arial, Helvetica, sans-serif;
}
#header-title {
  margin-top: 30px;
  margin-bottom: 18px;
  margin-left: 10px;
  font-size: 2.1em;
  color: #f4f4f4;
}
#header-subtitle {
  margin-top: 0px;
  margin-bottom: 18px;
  margin-left: 12px;
  font-size: 1.1em;
  color: #ddd;
}
#page-footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 46.5px;
  background-color: #363636;
  border-top: solid 1.5px rgba(0, 0, 0, 0.3);
  padding-top: 2px;
  padding-left: 9px;
}

a.button {
  display: inline-block;
  padding: 8px 15px;
  text-align: center;
  text-decoration: none;
  color: #f2f2f2;
  background-color: #666;
  border-radius: 5px;
  transition: background-color 0.25s;
}
a.button:hover {
  background-color: #777;
}

span.world-title {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, Arial, Helvetica, sans-serif;
  font-weight: bold;
}
span.world-title > a[href] {
  text-decoration: none;
  color: #ebebd9;
}
span.world-title > a:visited {
  color: #d9ebea;
}

/* Navbar */

#navbar {
  position: sticky;
  top: 0;
  background-color: #222;
  z-index: 5;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
}
#navbar ul.navmenu {
  display: none;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: stretch;
  list-style-type: none;
  margin: 0;
  background-color: #222;
}
#navbar ul.navmenu.horizontal {
  flex-direction: row;
  padding: 0 3px;
}
#navbar ul.navmenu.vertical {
  flex-direction: column;
  padding: 1px 2px;
}
#navbar ul.navmenu.root,
#navbar li.dropdown:hover > ul.navmenu,
#navbar li.dropright:hover > ul.navmenu {
  display: flex;
}
#navbar ul.navmenu.root {
  padding-left: 30px;
}
#navbar ul.navmenu.horizontal > li.navbar-item {
  padding-bottom: 3px;
}
#navbar ul.navmenu.horizontal > li.navbar-item.dropdown > ul.navmenu {
  top: calc(100% - 1px);
  left: 2px;
}
#navbar ul.navmenu.vertical > li.navbar-item.dropright > ul.navmenu {
  top: 0px;
  left: calc(100% - 1px);
}
#navbar li.dropdown,
#navbar li.dropright {
  position: relative;
}
#navbar ul.navmenu:not(.root) {
  position: absolute;
  border: #999 solid 1px;
  padding-top: 3px;
  padding-bottom: 5px;
}
#navbar ul.navmenu > li.navbar-item {
  padding: 0 0px;
  margin: 0 0px;
  user-select: none;
  cursor: default;
  font-size: 1.45rem;
  white-space: nowrap;
  user-select: none;
  color: #ddd;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
}
#navbar ul.navmenu > li.navbar-item.current {
  background-color: #abf3;
}
#navbar ul.navmenu > li.navbar-item.separator {
  height: 2px;
  margin-top: 0.3em;
  margin-bottom: 0.15em;
  margin-right: 8px;
  margin-left: 8px;
  background-color: #999;
}
#navbar ul.navmenu > li.navbar-item.text {
  color: #6b6;
}
#navbar ul.navmenu > li.navbar-item.text > a {
  padding: 2px 4px;
}
#navbar ul.navmenu > li.navbar-item.button > a,
#navbar ul.navmenu > li.navbar-item.dropdown > a,
#navbar ul.navmenu > li.navbar-item.dropright > a {
  padding: 0 7px;
}
#navbar ul.navmenu > li.navbar-item.button:hover,
#navbar ul.navmenu > li.navbar-item.dropdown:hover,
#navbar ul.navmenu > li.navbar-item.dropright:hover {
  background-color: #fcc3;
}
#navbar ul.navmenu > li.navbar-item.button > a {
  text-decoration: none;
  flex-grow: 1;
}
#navbar ul.navmenu > li.navbar-item.button > a[href] {
  color: #ebebd9;
}
#navbar ul.navmenu > li.navbar-item.button > a:visited {
  color: #d9ebea;
}
#navbar li.dropdown > .arrow, #navbar li.dropright > .arrow {
  font-size: 0.75em;
  align-self: flex-end;
  margin-inline-start: -2px;
  padding-inline-end: 5px;
  padding-block-end: 4px;
}
#navbar #navbar-end {
  padding-left: 0;
  padding-right: 30px;
}
#navbar div.tooltip {
  font-size: 0.55em;
}

/* World icon styles */
/* icon palette: https://coolors.co/7acc52-ad6ed4-4b8ad2-ccb233-d97777-a8a8a8 */

.world-icon {
  display: block;
}
.world-icon.regular {
  height: 16px;
  width: 16px;
  background-size: 16px 16px;
}
.world-icon.small {
  height: 8px;
  width: 8px;
  background-size: 8px 8px;
}
.world-icon-grid {
  display: grid;
  grid-template: "a b" "c d";
  min-height: 16px;
  min-width: 16px;
}

.world-icon.world-icon-status-onl {
  background-image: url(/static/icons/status_online.svg);
}
.world-icon.world-icon-status-mtp {
  background-image: url(/static/icons/status_maintenancepart.svg);
}
.world-icon.world-icon-status-mtf {
  background-image: url(/static/icons/status_maintenancefull.svg);
}
.world-icon.world-icon-status-unknown, .world-icon.world-icon-status-unk {
  background-image: url(/static/icons/status_unknown.svg);
}
.world-icon.world-icon-classification-st {
  background-image: url(/static/icons/classif_standard.svg);
}
.world-icon.world-icon-classification-nw {
  background-image: url(/static/icons/classif_new.svg);
}
.world-icon.world-icon-classification-pf {
  background-image: url(/static/icons/classif_preferred.svg);
}
.world-icon.world-icon-classification-cg {
  background-image: url(/static/icons/classif_congested.svg);
}
.world-icon.world-icon-classification-unknown, .world-icon.world-icon-classification-uk {
  background-image: url(/static/icons/classif_unknown.svg);
}
.world-icon.world-icon-charcreate-1 {
  background-image: url(/static/icons/charcr_available.svg);
}
.world-icon.world-icon-charcreate-0 {
  background-image: url(/static/icons/charcr_unavailable.svg);
}
.world-icon.world-icon-charcreate-unknown, .world-icon.world-icon-charcreate--1 {
  background-image: url(/static/icons/charcr_unknown.svg);
}

/* Index page */

#index-main .index-section {
  border: 2px solid #fff3;
  border-radius: 8px;
  overflow: hidden;
  margin: 5px;
  margin-top: 25px;
}
#index-main .index-section > .index-section-header {
  padding: 5px 10px;
  border-bottom: 2px solid #fff3;
  font-weight: bold;
  font-size: 1.1em;
  background-color: #335;
  text-align: center;
}
#index-main .index-section > .index-section-content .history-bars-section {
  margin: 8px 8px;
}
#index-main .index-section > .index-section-content .history-bars-section .world-title {
  grid-column: 1 / span 2;
  justify-self: center;
  font-size: 1.5em;
}
#favorite-worlds-section #favorite-worlds-empty {
  padding-left: 12px;
}

/* Snapshot page */

#select-regions {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  border-radius: 10px;
  overflow: hidden;
}

#select-regions > button.region-toggle {
  color: #eee;
  background-color: rgba(0, 0, 0, 0.25);
  padding: 15px;
  border: none;
  font-family: Arial, Helvetica, sans-serif;
}
#select-regions > button.region-toggle.on {
  color: #e6e6e6;
  background-color: rgba(0, 0, 0, 0.5);
}
#select-regions > button.region-toggle.on::before {
  content: '✓ ';
}
#select-regions > button.region-toggle:not(.on)::before {
  content: '× ';
}
#select-regions > button.region-toggle:not(.on):hover {
  background-color: rgba(0, 0, 0, 0.15);
}
#select-regions > button.region-toggle:active {
  background-color: rgba(0, 0, 0, 0.55) !important;
}

#snapshot-main,
#index-main .index-section > .index-section-content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
}

section.snapshot-dc-block {
  display: none;
  overflow: hidden;
  border-radius: 5px;
  background-color: #0002;
  box-shadow: 0px 0px 6px 3px rgba(0, 0, 0, 0.25);
  
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0.5);

  margin: 15px 10px;
}
section.snapshot-dc-block.shown {
  display: block;
}

section.snapshot-dc-block .dc-title {
  background-color: rgba(0, 0, 0, 0.3);
  margin: 0;
  padding: 0.4em 0.75em;
  text-align: center;
  font-size: 1.1em;
  cursor: default;
}

section.snapshot-dc-block ul.dc-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

section.snapshot-dc-block ul.dc-list > li {
  display: flex;
  flex-direction: row;
  padding: 9px 7px;
  margin: 0 5px;
}

section.snapshot-dc-block ul.dc-list > li:not(:last-of-type) {
  border-bottom: 1px solid #fff4;
}

section.snapshot-dc-block .world-name {
  margin: 0;
  min-width: 105px;
  font-size: 0.95em;
}
section.snapshot-dc-block .world-name > a {
  text-decoration: none;
  color: #ebebd9;
}
section.snapshot-dc-block .world-name > a:visited {
  color: #d9ebea;
}

/* World history page */

#world-main {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding: 15px 10px;
}

#days-range-buttons a.button.current {
  pointer-events: none;
  cursor: default;
  background-color: #555;
}

.world-fav-btn-form .world-fav-btn {
  display: block;
  background: none;
  border: none;
  font-size: 0.5em;
  color: gold;
  margin-top: 0.5em;
  transition: transform 0.1s;
}
.world-fav-btn-form .world-fav-btn:hover:not(:disabled) {
  transform: scale(1.15);
}
.world-fav-btn-form .world-fav-btn:active:not(:disabled) {
  transform: scale(0.9);
}
.world-fav-btn-form .world-fav-btn:disabled {
  color: rgb(184, 184, 184);
}

